--- a/index.html
+++ b/index.html
@@ -3,9 +3,143 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <title>Title</title>
 </head>
 <body>
+<div ng-app="bootstrpConf">
+    <div id="signup_form_modal" class="modal fade" aria-hidden="true" role="dialog" aria-labelledby="modal_label">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title" id="modal_label">Sign Up Today!</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="signup_form" action="">
+                        <fieldset class="form-group">
+                            <label for="first_name">First Name:</label>
+                            <input class="form-control" id="first_name" placeholder="First Name">
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="last_name">Last Name:</label>
+                            <input class="form-control" id="last_name" placeholder="Last Name">
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="email">Email:</label>
+                            <input class="form-control" id="email" placeholder="Email">
+                            <small class="text-muted">Your email will be used as your username.</small>
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="profession">You're:</label>
+                            <select id="profession" class="c-select">
+                                <option>---</option>
+                                <option>Javascript Developer</option>
+                                <option>Ruby developer</option>
+                                <option>Python developer</option>
+                                <option>Web Designer</option>
+                            </select>
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label class="c-input c-radio">
+                                <input type="radio" name="age" id="age1" value="under21">
+                                <span class="c-indicator"></span>
+                                I am &lt;21
+                            </label>
+                            <label class="c-input c-radio">
+                                <input type="radio" name="age" id="age2" value="over21" checked>
+                                <span class="c-indicator"></span>
+                                I am &gt;21
+                            </label>
+                        </fieldset>
+                        <fieldset class="form-group m-t-2">
+                            <button class="btn btn-danger" type="submit">Sign Up</button>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
+    <div id="speakers_modal" class="modal fade" aria-hidden="true" role="dialog" aria-labelledby="modal_label">
 
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title" id="modal_label">Speakers</h4>
+                </div>
+                <div class="modal-body">
+                    <ul class="list-group">
+                        <li class="list-group-item"><span>Jason Node</span> <a href="#" class="btn btn-sm btn-danger">Details</a></li>
+                        <li class="list-group-item"><span>Alice Sass</span> <a href="#" class="btn btn-sm btn-danger">Details</a></li>
+                        <li class="list-group-item"><span>Carl Ruby</span> <a href="#" class="btn btn-sm btn-danger">Details</a></li>
+                        <li class="list-group-item"><span>Frank Script</span> <a href="#" class="btn btn-sm btn-danger">Details</a></li>
+                        <li class="list-group-item"><span>Sophie Perl</span> <a href="#" class="btn btn-sm btn-danger">Details</a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+
+    <nav class="top-nav m-b-3 p-t-1 animated fadeInDown clearfix">
+        <div class="container">
+            <ul class="list-unstyled list-inline">
+                <li class="list-inline-item m-r-1"><a href="#" class="js-scroll" data-scroll-to="#home">Home</a></li>
+
+                <li class="list-inline-item m-r-1"><a href="#" class="js-scroll" data-scroll-to="#speakers">Speakers</a></li>
+                <li class="list-inline-item m-r-1"><a href="#" class="js-scroll" data-scroll-to="#locations">Locations</a></li>
+                <li class="list-inline-item m-r-1"><a href="#" class="js-scroll" data-scroll-to="#topics">Topics</a></li>
+                <li class="list-inline-item m-r-0"><a href="#" class="btn signup-btn btn-danger btn-sm" data-toggle="modal" data-target="#signup_form_modal">Buy Tickets</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- jumbotron -->
+    <header id="home" class="top-hero jumbotron-fluid p-b-3 bg-faded">
+        <div class="container animated fadeInUp">
+            <h1 class="display-3">Bootstrap Conference</h1>
+            <p class="lead m-t-1">July 30th - August 15th</p>
+            <p class="lead m-t-1 m-b-2">Everything you need to know about Bootstrap.</p>
+            <button type="button" class="btn btn-lg btn-danger m-t-1" data-toggle="modal" data-target="#signup_form_modal">Buy Tickets</button>
+            <button type="button" class="js-scroll btn btn-lg btn-default m-t-1" data-scroll-to="#speakers">Learn More</button>
+        </div>
+    </header>
+
+    <section id="speakers" class="banner speakers p-y-3">
+        <div class="wrapper">
+            <h2 class="m-b-2 display-5 text-uppercase">Meet With Experts</h2>
+            <a href="#" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#speakers_modal">Our Speakers</a>
+        </div>
+    </section>
+    <section id="topics" class="banner learn p-y-3">
+        <div class="wrapper">
+            <h2 class="m-b-2 display-5 text-uppercase">Learn Industry Practices</h2>
+            <a href="#" class="btn btn-danger btn-lg btn-block">Topics</a>
+        </div>
+    </section>
+    <div id="locations" class="banner signup p-y-3">
+        <div class="wrapper">
+            <h2 class="m-b-2 display-5 text-uppercase">Don't Miss Out</h2>
+            <a href="#" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#signup_form_modal">Buy Tickets</a>
+        </div>
+    </div>
+    <footer class="p-y-2">
+        <p class="copyright"><span id="copyright-year">2016</span> Bootstrap Conference, All Rights Reserved</p>
+    </footer>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.3/js/tether.min.js"></script>
+<script rel="script" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+<script rel="script" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js"></script>
+<script rel="script" src="script.js"></script>
 </body>
 </html>
